refactor: port binary download and GitHub services to Java 8
- Replace CompletableFuture chaining with explicit BiConsumer callbacks
- Replace Platform.OS with System.getProperty(os.name) checks
- Update Gson API from JsonParser.parseReader to new JsonParser().parse
- Replace SLF4J with Log4j2 LogManager.getLogger
- Replaced var keyword with explicit types